# elfin_conjunctions

./: .gitignore  README.md  requirements.txt  setup.cfg
elfin_conjunctions/: __init__.py  __main__.py  a_script.py  conjunction.py  elfin_footprint.py  elfin_themis_conjunction_summary_movies.py  find_elfin_themis_conjunctions.py  library.py  merge_conjunctions.py
elfin_conjunctions/data/: 2019_2023_elfin_themis_rego_trex_conjunctions.csv  2019_2023_elfin_trex_rgb_conjunctions_data.csv  anisotropic_fluxes_inside_ps_ib.xlsx  elfin_a_themis_asi_conjunctions.csv  elfin_a_themis_asi_conjunctions_filtered.csv  elfin_b_themis_asi_conjunctions.csv  elfin_b_themis_asi_conjunctions_filtered.csv
elfin_conjunctions/load/: asi.py  elfin.py
