[metadata]
name = elfin_conjunctions
version = 0.0.1
description = 'Study the conjunctions between the ELFIN CubeSats and auroral all-sky imagers.'
long_description = file: README.md 
url='https://github.com/mshumko/elfin_conjunctions'
author='M. Shumko'
author_email='msshumko@gmail.com'
long_description_content_type = text/markdown
keywords = Python, package, template, data science
python_requires='>=3.0'
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires = 
    numpy 
    matplotlib
    pandas 
    cdflib
    cartopy
    asilib